--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <title>Document</title>
+    <title>Juka</title>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline text-red-400">Hello world!</h1>
-  </body>
+  <body></body>
 </html>
