--- a/navHero.html
+++ b/navHero.html
@@ -126,6 +126,103 @@
         </div>
       </div>
     </section>
+    <section class="mail bg-[#2B2B2B] font-[Poppins]">
+      <section class="text-white py-10 px-6">
+        <div class="max-w-4xl mx-auto">
+          <h2
+            class="text-2xl md:text-[35px] md:font-bold mb-4 text-center font-poppins"
+          >
+            La puissance de l’e-mail marketing
+          </h2>
+        </div>
+        <div class="md:px-[104px] text-center mt-[40px]">
+          <p class="md:leading-[40px] md:text-[20px] md:font-medium">
+            En 2024, avec l’explosion des coûts d’acquisition sur toutes les
+            plateformes publicitaires,
+            <span class="text-orange-500 font-bold"
+              >l’email marketing est devenu le canal le plus <br />
+              rentable</span
+            >
+            <br />
+            Il est impératif pour n’importe quelle marque e-commerce aujourd’hui
+            d’investir sur ce canal pour augmenter drastiquement son <br />
+            bénéfice et conserver une bonne rentabilité malgré l’investissement
+            en acquisition.
+          </p>
+        </div>
+      </section>
+
+      <div class="max-w-4xl mx-auto">
+        <img src="./assets/mail/mail1.svg" alt="" class="md:w-[1106px]" />
+        <img src="./assets/mail/mail2.svg" alt="" class="md:w-[1106px] md:" />
+
+        <img src="./assets/mail/mail3.svg" alt="" class="md:w-[1106px] md:" />
+
+        <img src="./assets/mail/mail4.svg" alt="" class="md:w-[1106px] md:" />
+      </div>
+
+      <div>
+        <h1
+          class="py-[50px] text-2xl text-white md:text-[35px] md:font-bold mb-4 text-center"
+        >
+          30 - 50 %
+        </h1>
+        <p class="md:text-[20px] md:font-medium text-center text-white">
+          C’est la part de votre chiffre d’affaires globale généré uniquement
+          avec les emails si les bonnes stratégies sont appliquées sur <br />
+          votre marque 💌
+        </p>
+        <h1
+          class="text-2xl text-white md:text-[30px] md:font-bold mb-[65px] mt-[50px] text-center"
+        >
+          Le problème de 90% des marques ?
+        </h1>
+      </div>
+      <div
+        class="card m-[20px] md:flex align-middle justify-center gap-[80px] md:px-[104px] text-center"
+      >
+        <div class="bg-white border rounded-[20px] pb-5 w-[408px]">
+          <h1 class="mt-[20px] text-[20px] font-bold">Manque de temps</h1>
+          <p class="mt-[20px] px-[20px] text-[20px]">
+            En plus de prendre beaucoup de temps et d’énergie à préparer les
+            emails, vous n’avez pas le temps de <br />concevoir une stratégie
+            clair, d’écrire et designer chaque email avant de les planifier…
+          </p>
+        </div>
+        <div class="bg-white border rounded-[20px] pb-5 w-[408px]">
+          <h1 class="mt-[20px] text-[20px] font-bold">
+            Manque de connaissance
+          </h1>
+          <p class="mt-[20px] px-[20px] text-[20px] mb-5">
+            Vous avancez dans le brouillard <br />
+            sans réellement savoir si ce que <br />
+            vous faites est réellement la bonne <br />
+            chose à faire et cela résulte généralement de statistiques très
+            inférieurs à la moyenne…
+          </p>
+        </div>
+        <div class="bg-white border rounded-[20px] pb-5 w-[408px]">
+          <h1 class="mt-[20px] text-[20px] font-bold">
+            Manque de connaissance
+          </h1>
+          <p class="mt-[20px] px-[20px] text-[20px]">
+            De nouvelles mesures RGPD que <br />
+            vous pouvez omettre et risque <br />
+            drastiquement d’impacter votre <br />
+            déliverabilité et cela ce traduit <br />
+            généralement par de plus <br />en plus de mails qui se retrouvent en
+            spam sans jamais être lus…
+          </p>
+        </div>
+      </div>
+      <div class="mt-[94px] flex flex-col justify-end items-center">
+        <p class="md:text-[20px] md:font-medium text-center text-white">
+          En définitive, à cause de l’une ou plusieurs de ces raisons, on se
+          retrouve vite avec 10.000€ à +100.000€ perdu chaque année…
+        </p>
+        <img src="./assets//mail/Séparateur.svg" alt="" />
+      </div>
+    </section>
     <section class="superieur">
       <div
         class="bg-[#2B2B2B] py-[66px] flex items-center justify-center md:gap-[80px] 2xl:gap-[260px]"
