--- a/navHero.html
+++ b/navHero.html
@@ -223,6 +223,58 @@
         <img src="./assets//mail/Séparateur.svg" alt="" />
       </div>
     </section>
+    <section class="booster mt-[57px] font-[Poppins]">
+      <div class="max-w-4xl mx-auto">
+        <h2
+          class="text-2xl md:text-[35px] md:font-bold mb-4 text-center font-poppins f"
+        >
+          Passez au niveau supérieur
+        </h2>
+      </div>
+      <div class="md:px-[104px] text-center mt-[40px] mb-[50px]">
+        <p class="md:leading-[40px] md:text-[20px] md:font-medium">
+          Lorem ipsum dolor sit amet consectetur. In sit magna sed curabitur.
+          Vitae purus massa semper in quis sit vulputate fusce duis. Massa
+          <br />
+          magna blandit convallis gravida aenean vel praesent. <br />
+          Cette arme va nous permettre d’agir sur les 3 points essentiel à la
+          croissance d’une croissance marque e-commerce :
+        </p>
+      </div>
+      <div class="flex justify-center align-middle">
+        <img
+          src="./assets/booster/Mockup 04 1.svg"
+          alt=""
+          class="md:w-[1140px]"
+        />
+      </div>
+      <div class="md:px-[104px] text-center mt-[40px] mb-[50px]">
+        <p class="md:leading-[40px] md:text-[20px] md:font-medium">
+          <span class="text-orange-500 font-bold"
+            >Beaucoup de marques négligent l’email marketing,</span
+          >
+          car elles ne sont tout simplement pas conscientes du potentiel que ce
+          canal <br />
+          représente où ont du mal à déléguer…
+          <br />
+          <br />
+          Et c’est normal, certaines agences pratiques des méthodes de pricing
+          avec des commissions hallucinantes qui ne sont pas du tout à <br />
+          l’avantage du client et c’est normal que ceux-ci se méfient d’autres
+          prestataires (honnêtes) ! <br />
+          <br />
+          Alors qu’en réalité, les emails constituent pour n’importe quelle
+          marque ecommerce qui prendra soin de les exploiter :
+        </p>
+      </div>
+      <div class="flex justify-center align-middle">
+        <img
+          src="./assets/booster/Frame 39895.svg"
+          alt=""
+          class="md:w-[1325px]"
+        />
+      </div>
+    </section>
     <section class="superieur">
       <div
         class="bg-[#2B2B2B] py-[66px] flex items-center justify-center md:gap-[80px] 2xl:gap-[260px]"
