--- a/navHero.html
+++ b/navHero.html
@@ -658,6 +658,70 @@
         </div>
       </div>
     </section>
+    <section class="Qui bg-[#2B2B2B] font-[Poppins] pb-[80px]">
+      <div class="mx-auto md:px-[50px] 2xl:px-[0px]">
+        <h1
+          class="md:text-[35px] text-[35px] md:font-bold text-center text-white pt-[52px] mb-[76px]"
+        >
+          Qui suis-je ?
+        </h1>
+        <div
+          class="md:flex md:justify-center md:align-middle items-center gap-[44px]"
+        >
+          <img
+            src="./assets/qui/Ellipse 26.svg"
+            alt=""
+            class="w-[150px] h-[150px]"
+          />
+          <p
+            class="md:leading-[40px] md:text-[20px] md:font-medium text-white leading-[40px]"
+          >
+            Hello, moi c'est Romain, CEO et co-fondateur de Juka, votre futur
+            partenaire destiné à débloquer certaines <br />
+            problématiques de croissances (CVR, LTV, AOV) et scaler votre
+            boutique au niveau supérieur grâce à l’email <br />
+            marketing.
+          </p>
+        </div>
+        <div class="2xl:ml-[120px]">
+          <div class="max-w-[1391px] mx-auto mt-[57px]">
+            <p
+              class="md:leading-[40px] md:text-[20px] md:font-medium text-white"
+            >
+              Après avoir accompagné pendant +300 e-commerçants ces 3 dernières
+              années à générer +30M€ de chiffre d’affaires uniquement avec
+              <br />
+              les emails dans des niches diverses et variées; nous avons pu
+              affuter nos armes pour mettre au point une stratégie éprouvés qui
+              <br />
+              s’adapte à tout type de business e-commerce !
+              <br />
+              <br />
+              Mais aujourd’hui, nous souhaitons aller encore plus loin…
+              <br />
+              <br />
+              Notre mission aujourd’hui est simple : rendre l’email marketing
+              accessible à tous les e-commercants à travers des emails impactant
+              au
+              <br />
+              service d’une stratégie bien huilée pour exploser votre chiffre
+              d’affaires… <br />
+              ` <br />
+              <span
+                >Et ce que vous fassiez 10K€/ mois ou +100.000K€/mois !</span
+              >
+              <br />
+              <br />Alors, prêt(e) à rejoindre l’aventure ? Réserve un appel
+              avec moi en cliquant ici
+              <br />
+              <br />
+              À très vite,
+              <br /><br />Romain
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="question mt-[24px] mb-[102px]">
       <h1 class="text-[#000] font-[Poppins] text-[35px] font-bold text-center">
         Des questions ?
