--- a/navHero.html
+++ b/navHero.html
@@ -126,7 +126,7 @@
         </div>
       </div>
     </section>
-    <section class="mail bg-[#2B2B2B] font-[Poppins]">
+    <section class="mail bg-[#2B2B2B] font-[Poppins] pt-[30px]">
       <section class="text-white py-10 px-6">
         <div class="max-w-4xl mx-auto">
           <h2
@@ -135,13 +135,29 @@
             La puissance de l’e-mail marketing
           </h2>
         </div>
-        <div class="md:px-[104px] text-center mt-[40px]">
-          <p class="md:leading-[40px] md:text-[20px] md:font-medium">
+        <div class="md:px-[104px] 2xl:px-[0px] text-center mt-[40px]">
+          <p
+            class="hidden 2xl:block md:leading-[40px] md:text-[20px] md:font-medium"
+          >
             En 2024, avec l’explosion des coûts d’acquisition sur toutes les
             plateformes publicitaires,
             <span class="text-orange-500 font-bold"
-              >l’email marketing est devenu le canal le plus <br />
-              rentable</span
+              >l’email marketing est devenu le canal le plus
+              <br />rentable</span
+            >
+            <br />
+            Il est impératif pour n’importe quelle marque e-commerce aujourd’hui
+            d’investir sur ce canal pour augmenter drastiquement son <br />
+            bénéfice et conserver une bonne rentabilité malgré l’investissement
+            en acquisition.
+          </p>
+          <p
+            class="md:block 2xl:hidden md:leading-[40px] md:text-[20px] md:font-medium"
+          >
+            En 2024, avec l’explosion des coûts d’acquisition sur toutes les
+            plateformes publicitaires,
+            <span class="text-orange-500 font-bold"
+              >l’email marketing est devenu le canal le plus rentable</span
             >
             <br />
             Il est impératif pour n’importe quelle marque e-commerce aujourd’hui
@@ -167,10 +183,19 @@
         >
           30 - 50 %
         </h1>
-        <p class="md:text-[20px] md:font-medium text-center text-white">
+        <p
+          class="md:hidden 2xl:block md:text-[20px] md:font-medium text-center text-white"
+        >
           C’est la part de votre chiffre d’affaires globale généré uniquement
           avec les emails si les bonnes stratégies sont appliquées sur <br />
           votre marque 💌
+        </p>
+        <p
+          class="px-[104px] md:block 2xl:hidden md:text-[20px] md:font-medium text-center text-white"
+        >
+          C’est la part de votre chiffre d’affaires globale généré uniquement
+          avec les emails si les bonnes stratégies sont appliquées sur votre
+          marque 💌
         </p>
         <h1
           class="text-2xl text-white md:text-[30px] md:font-bold mb-[65px] mt-[50px] text-center"
@@ -179,7 +204,7 @@
         </h1>
       </div>
       <div
-        class="card m-[20px] md:flex align-middle justify-center gap-[80px] md:px-[104px] text-center"
+        class="card m-[20px] md:flex align-middle justify-center md:px-[50px] 2xl:px-[0px] md:gap-[40px] 2xl:gap-[80px] text-center"
       >
         <div class="bg-white border rounded-[20px] pb-5 w-[408px]">
           <h1 class="mt-[20px] text-[20px] font-bold">Manque de temps</h1>
@@ -216,7 +241,9 @@
         </div>
       </div>
       <div class="mt-[94px] flex flex-col justify-end items-center">
-        <p class="md:text-[20px] md:font-medium text-center text-white">
+        <p
+          class="px-[104px] 2xl:px-[0px] md:text-[20px] md:font-medium text-center text-white"
+        >
           En définitive, à cause de l’une ou plusieurs de ces raisons, on se
           retrouve vite avec 10.000€ à +100.000€ perdu chaque année…
         </p>
@@ -277,7 +304,7 @@
     </section>
     <section class="superieur">
       <div
-        class="bg-[#2B2B2B] py-[66px] flex items-center justify-center md:gap-[80px] 2xl:gap-[260px]"
+        class="bg-[#2B2B2B] py-[66px] flex items-center justify-center md:gap-[80px] 2xl:gap-[180px]"
       >
         <div>
           <h1 class="text-[35px] font-[Poppins] font-bold text-[#FFF]">
