--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
     </section>
     <section class="hero bg-[#2B2B2B]">
       <div
-        class="md:flex items-center justify-center 2xl:gap-[150px] px-[20px] md:px-[0px]"
+        class="md:flex items-center justify-center gap-[0px] 2xl:gap-[70px] px-[20px] md:px-[40px] 2xl:px-[0px]"
       >
         <div class="md:hidden flex items-center justify-center">
           <img
-            src="./assets/hero/heroImgMobile.svg"
+            src="./assets/hero/Group 39888.svg"
             alt="heroImg"
             class="mt-[30px] md:hidden"
           />
@@ -155,8 +155,10 @@
           >
             RESERVER UN CALL
           </button>
-          <div class="mt-[25px]">
-            <div class="flex items-center gap-[4px]">
+          <div
+            class="mt-[25px] md:mt-[50px] w-[250px] md:w-[330px] md:h-[80px]"
+          >
+            <!-- <div class="flex items-center gap-[4px]">
               <img
                 src="./assets/hero/Star.svg"
                 alt="star"
@@ -190,16 +192,17 @@
                 class="w-[22px] md:w-[28px]"
               />
               <img
-                src="./assets/hero/Star2.svg"
+                src="./assets/hero/Star1.svg"
                 alt="star"
                 class="w-[22px] md:w-[28px]"
               />
-            </div>
+            </div> -->
+            <img src="./assets/hero/Group 39908.svg" alt="" />
           </div>
         </div>
         <div class="md:pt-[98px] md:pb-[59px]">
           <img
-            src="./assets/hero/heroImg.svg"
+            src="./assets/hero/Group 39888.svg"
             alt="heroImg"
             class="hidden md:block"
           />
@@ -211,7 +214,7 @@
         ></div>
       </div>
       <div
-        class="py-[40px] md:py-[58px] bg-[#2B2B2B] flex items-center justify-center animate-loop-scroll md:animate-none"
+        class="py-[40px] md:py-[58px] bg-[#2B2B2B] flex items-center justify-center"
       >
         <img src="./assets/hero/Logos.svg" alt="logos" />
       </div>
@@ -926,14 +929,9 @@
       ></div>
     </div>
     <div
-      class="overflow-hidden flex items-center justify-between md:justify-center md:gap-[300px] md:mb-[57px] animate-loop-scroll"
+      class="overflow-hidden flex items-center justify-between md:justify-center md:gap-[300px] md:mb-[57px]"
     >
       <div class="flex items-center gap-[50px] md:gap-[200px]">
-        <img src="./assets/review/r1.svg" alt="" />
-        <img src="./assets/review/r2.svg" alt="" />
-        <img src="./assets/review/r3.svg" alt="" />
-      </div>
-      <div class="hidden md:flex items-center gap-[50px] md:gap-[200px]">
         <img src="./assets/review/r1.svg" alt="" />
         <img src="./assets/review/r2.svg" alt="" />
         <img src="./assets/review/r3.svg" alt="" />
