--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Hero</title>
+    <title>Juka</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
