--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       >
         <div class="md:hidden flex items-center justify-center">
           <img
-            src="./assets/hero/Group 39888.svg"
+            src="./assets/hero/Group 39916.svg"
             alt="heroImg"
             class="mt-[30px] md:hidden"
           />
@@ -202,7 +202,7 @@
         </div>
         <div class="md:pt-[98px] md:pb-[59px]">
           <img
-            src="./assets/hero/Group 39888.svg"
+            src="./assets/hero/Group 39916.svg"
             alt="heroImg"
             class="hidden md:block"
           />
@@ -214,9 +214,9 @@
         ></div>
       </div>
       <div
-        class="py-[40px] md:py-[58px] bg-[#2B2B2B] flex items-center justify-center"
+        class="px-[20px] md:px-[100px] py-[40px] md:py-[58px] bg-[#2B2B2B] flex items-center justify-center"
       >
-        <img src="./assets/hero/Logos.svg" alt="logos" />
+        <img src="./assets/hero/Group 39925.svg" alt="logos" />
       </div>
       <div
         class="bg-[#FFF] md:flex items-center justify-center 2xl:gap-[170px]"
@@ -929,12 +929,12 @@
       ></div>
     </div>
     <div
-      class="overflow-hidden flex items-center justify-between md:justify-center md:gap-[300px] md:mb-[57px]"
+      class="overflow-hidden flex items-center justify-center md:gap-[300px] md:mb-[57px]"
     >
-      <div class="flex items-center gap-[50px] md:gap-[200px]">
-        <img src="./assets/review/r1.svg" alt="" />
-        <img src="./assets/review/r2.svg" alt="" />
-        <img src="./assets/review/r3.svg" alt="" />
+      <div class="px-[20px] flex items-center gap-[40px] md:gap-[200px]">
+        <img src="./assets/review/r1.svg" alt="" class="w-[80px] md:w-[129px] h-[37px]"/>
+        <img src="./assets/review/r2.svg" alt="" class="w-[80px] md:w-[129px] h-[37px]"/>
+        <img src="./assets/review/r3.svg" alt="" class="w-[80px] md:w-[129px] h-[37px]"/>
       </div>
     </div>
     <div
