--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
             alt="heroImg"
             class="mt-[30px] md:hidden"
           />
+          <img
+            src="./assets/hero/Screenshot 2024-07-01 145919 2.svg"
+            alt="heroImg2"
+            class="mt-[30px] hidden"
+          />
         </div>
         <div class="pt-[30px] md:pt-[85px] md:pb-[112px]">
           <div
@@ -932,9 +937,21 @@
       class="overflow-hidden flex items-center justify-center md:gap-[300px] md:mb-[57px]"
     >
       <div class="px-[20px] flex items-center gap-[40px] md:gap-[200px]">
-        <img src="./assets/review/r1.svg" alt="" class="w-[80px] md:w-[129px] h-[37px]"/>
-        <img src="./assets/review/r2.svg" alt="" class="w-[80px] md:w-[129px] h-[37px]"/>
-        <img src="./assets/review/r3.svg" alt="" class="w-[80px] md:w-[129px] h-[37px]"/>
+        <img
+          src="./assets/review/r1.svg"
+          alt=""
+          class="w-[80px] md:w-[129px] h-[37px]"
+        />
+        <img
+          src="./assets/review/r2.svg"
+          alt=""
+          class="w-[80px] md:w-[129px] h-[37px]"
+        />
+        <img
+          src="./assets/review/r3.svg"
+          alt=""
+          class="w-[80px] md:w-[129px] h-[37px]"
+        />
       </div>
     </div>
     <div
